name = "packpack"
version = "0.0.1"
authors = [
  { name="SANJITH M", email="msanjith130#gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[project.urls]
Homepage = "https://github.com/sanjithhithub/packpack"
Issues = "https://github.com/sanjithhithub/packpack/issues"
